{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 724,
  "lineage": "b706cb41-0767-ede1-8e2e-74edda223f14",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:internet-gateway/igw-09fcfceb6491423ea",
            "id": "igw-09fcfceb6491423ea",
            "owner_id": "380561000375",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "app-igw-2397b54c",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "app-igw-2397b54c",
              "Project": "Astrolearn"
            },
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:380561000375:loadbalancer/app/backend-alb-2397b54c/76bfb29e3c66760f",
            "arn_suffix": "app/backend-alb-2397b54c/76bfb29e3c66760f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-backend-alb-2397b54c-956549290.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:380561000375:loadbalancer/app/backend-alb-2397b54c/76bfb29e3c66760f",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb-2397b54c",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c6c0b79b5e306f2d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012bb41a694b8b86f"
              },
              {
                "subnet_id": "subnet-02c63344f536c49bc"
              }
            ],
            "subnets": [
              "subnet-012bb41a694b8b86f",
              "subnet-02c63344f536c49bc"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Backend ALB",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Backend ALB",
              "Project": "Astrolearn"
            },
            "vpc_id": "vpc-09ba3aefa1b0aefe0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_ingress",
            "aws_security_group.backend_alb_sg",
            "aws_security_group.frontend_instances_sg",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:380561000375:loadbalancer/app/frontend-alb-2397b54c/8eb56522849f59be",
            "arn_suffix": "app/frontend-alb-2397b54c/8eb56522849f59be",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-2397b54c-1502494043.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:380561000375:loadbalancer/app/frontend-alb-2397b54c/8eb56522849f59be",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb-2397b54c",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04c7ce0c2b3c1db72"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012bb41a694b8b86f"
              },
              {
                "subnet_id": "subnet-02c63344f536c49bc"
              }
            ],
            "subnets": [
              "subnet-012bb41a694b8b86f",
              "subnet-02c63344f536c49bc"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Frontend ALB",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Frontend ALB",
              "Project": "Astrolearn"
            },
            "vpc_id": "vpc-09ba3aefa1b0aefe0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_ingress",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:380561000375:listener/app/backend-alb-2397b54c/76bfb29e3c66760f/31fdfff4fa741316",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:380561000375:targetgroup/backend-tg-2397b54c/6f4b8a6d1dbfe109",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:380561000375:listener/app/backend-alb-2397b54c/76bfb29e3c66760f/31fdfff4fa741316",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:380561000375:loadbalancer/app/backend-alb-2397b54c/76bfb29e3c66760f",
            "mutual_authentication": [],
            "port": 8088,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.backend_alb",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.alb_ingress",
            "aws_security_group.backend_alb_sg",
            "aws_security_group.frontend_instances_sg",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:380561000375:listener/app/frontend-alb-2397b54c/8eb56522849f59be/f1933314436be942",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:380561000375:targetgroup/frontend-tg-2397b54c/14238c68bf2c3ded",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:380561000375:listener/app/frontend-alb-2397b54c/8eb56522849f59be/f1933314436be942",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:380561000375:loadbalancer/app/frontend-alb-2397b54c/8eb56522849f59be",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.frontend_alb",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_ingress",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:380561000375:targetgroup/backend-tg-2397b54c/6f4b8a6d1dbfe109",
            "arn_suffix": "targetgroup/backend-tg-2397b54c/6f4b8a6d1dbfe109",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:380561000375:targetgroup/backend-tg-2397b54c/6f4b8a6d1dbfe109",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg-2397b54c",
            "port": 8088,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Backend Target Group",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Backend Target Group",
              "Project": "Astrolearn"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:380561000375:targetgroup/frontend-tg-2397b54c/14238c68bf2c3ded",
            "arn_suffix": "targetgroup/frontend-tg-2397b54c/14238c68bf2c3ded",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:380561000375:targetgroup/frontend-tg-2397b54c/14238c68bf2c3ded",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg-2397b54c",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Frontend Target Group",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Frontend Target Group",
              "Project": "Astrolearn"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:route-table/rtb-04eb2da9ad3cb8f5f",
            "id": "rtb-04eb2da9ad3cb8f5f",
            "owner_id": "380561000375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fcfceb6491423ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "public-route-table-2397b54c",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-route-table-2397b54c",
              "Project": "Astrolearn"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0625172b475124fdd",
            "route_table_id": "rtb-04eb2da9ad3cb8f5f",
            "subnet_id": "subnet-012bb41a694b8b86f"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c79aa5b5797c157",
            "route_table_id": "rtb-04eb2da9ad3cb8f5f",
            "subnet_id": "subnet-02c63344f536c49bc"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:security-group/sg-04c7ce0c2b3c1db72",
            "description": "Allow HTTP/HTTPS access to ALBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c7ce0c2b3c1db72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-ingress-2397b54c",
            "name_prefix": "",
            "owner_id": "380561000375",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "ALB Ingress",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "ALB Ingress",
              "Project": "Astrolearn"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_ingress_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:security-group/sg-0a1cfb8d962836a5f",
            "description": "Allow traffic to app ports from ALBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1cfb8d962836a5f",
            "ingress": [],
            "name": "app-ingress-from-alb-2397b54c",
            "name_prefix": "",
            "owner_id": "380561000375",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "App Ingress from ALB",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "App Ingress from ALB",
              "Project": "Astrolearn"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:security-group/sg-0c6c0b79b5e306f2d",
            "description": "Allow traffic to Backend ALB from Frontend Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic if necessary (e.g. health checks to instances)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6c0b79b5e306f2d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend App Port from Frontend Instances",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06646cf9dcbab5ece"
                ],
                "self": false,
                "to_port": 8088
              }
            ],
            "name": "backend-alb-sg-2397b54c",
            "name_prefix": "",
            "owner_id": "380561000375",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Backend ALB SG",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Backend ALB SG",
              "Project": "Astrolearn"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_ingress",
            "aws_security_group.frontend_instances_sg",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_instances_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:security-group/sg-0f0b4c4eb48697784",
            "description": "Allow traffic to Backend instances from Backend ALB and allow outbound to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic for OS updates etc.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0b4c4eb48697784",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend App Port from Backend ALB",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6c0b79b5e306f2d"
                ],
                "self": false,
                "to_port": 8088
              }
            ],
            "name": "backend-instances-sg-2397b54c",
            "name_prefix": "",
            "owner_id": "380561000375",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Backend Instances SG",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Backend Instances SG",
              "Project": "Astrolearn"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_ingress",
            "aws_security_group.backend_alb_sg",
            "aws_security_group.frontend_instances_sg",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_instances_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:security-group/sg-06646cf9dcbab5ece",
            "description": "Allow traffic to Frontend instances from Frontend ALB and allow outbound to Backend ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic for OS updates etc.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06646cf9dcbab5ece",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Frontend App Port from Frontend ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c7ce0c2b3c1db72"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "frontend-instances-sg-2397b54c",
            "name_prefix": "",
            "owner_id": "380561000375",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Frontend Instances SG",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Frontend Instances SG",
              "Project": "Astrolearn"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_ingress",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_ingress_from_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:security-group/sg-001f708599f791bf3",
            "description": "Allow DB traffic from Backend EC2s",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001f708599f791bf3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0b4c4eb48697784"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-ingress-from-backend-2397b54c",
            "name_prefix": "",
            "owner_id": "380561000375",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "RDS Ingress from Backend",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "RDS Ingress from Backend",
              "Project": "Astrolearn"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_ingress",
            "aws_security_group.backend_alb_sg",
            "aws_security_group.backend_instances_sg",
            "aws_security_group.frontend_instances_sg",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:security-group/sg-0919d3529c08f945e",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0919d3529c08f945e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-access-2397b54c",
            "name_prefix": "",
            "owner_id": "380561000375",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Allow SSH Access",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Allow SSH Access",
              "Project": "Astrolearn"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_alb_to_backend_instances_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress from Backend ALB to Backend instances",
            "from_port": 8088,
            "id": "sgrule-801803684",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c6c0b79b5e306f2d",
            "security_group_rule_id": "sgr-0bd5b1c43618b5f80",
            "self": false,
            "source_security_group_id": "sg-0f0b4c4eb48697784",
            "timeouts": null,
            "to_port": 8088,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_ingress",
            "aws_security_group.backend_alb_sg",
            "aws_security_group.backend_instances_sg",
            "aws_security_group.frontend_instances_sg",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_instances_to_rds_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress from Backend instances to RDS",
            "from_port": 5432,
            "id": "sgrule-1160114312",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0b4c4eb48697784",
            "security_group_rule_id": "sgr-063d4aa6d7e93ad7d",
            "self": false,
            "source_security_group_id": "sg-001f708599f791bf3",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_ingress",
            "aws_security_group.backend_alb_sg",
            "aws_security_group.backend_instances_sg",
            "aws_security_group.frontend_instances_sg",
            "aws_security_group.rds_ingress_from_backend",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_to_backend_alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress from Frontend instances to Backend ALB",
            "from_port": 8088,
            "id": "sgrule-4199896969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06646cf9dcbab5ece",
            "security_group_rule_id": "sgr-0127ffababdb7deeb",
            "self": false,
            "source_security_group_id": "sg-0c6c0b79b5e306f2d",
            "timeouts": null,
            "to_port": 8088,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_ingress",
            "aws_security_group.backend_alb_sg",
            "aws_security_group.frontend_instances_sg",
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:subnet/subnet-0c4e51cdd947a89ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4e51cdd947a89ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380561000375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-us-east-1a-2397b54c",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-us-east-1a-2397b54c",
              "Project": "Astrolearn"
            },
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:subnet/subnet-0cf8eb2e97f2e3581",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf8eb2e97f2e3581",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380561000375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-us-east-1b-2397b54c",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-us-east-1b-2397b54c",
              "Project": "Astrolearn"
            },
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:subnet/subnet-012bb41a694b8b86f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012bb41a694b8b86f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380561000375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1a-2397b54c",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1a-2397b54c",
              "Project": "Astrolearn"
            },
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:subnet/subnet-02c63344f536c49bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c63344f536c49bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380561000375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1b-2397b54c",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1b-2397b54c",
              "Project": "Astrolearn"
            },
            "vpc_id": "vpc-09ba3aefa1b0aefe0"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380561000375:vpc/vpc-09ba3aefa1b0aefe0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0920b3ade7b41a180",
            "default_route_table_id": "rtb-0b7d0e35cb24a08f9",
            "default_security_group_id": "sg-0160fc92e8f3896de",
            "dhcp_options_id": "dopt-0d48b1e2f8d89a91b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ba3aefa1b0aefe0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7d0e35cb24a08f9",
            "owner_id": "380561000375",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "app-vpc-2397b54c",
              "Project": "Astrolearn"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "app-vpc-2397b54c",
              "Project": "Astrolearn"
            }
          },
          "dependencies": [
            "random_id.suffix"
          ]
        }
      ]
    }
  ]
}